common/test/keyboards/invalid/engine/javascript_error/source/javascript_error.kps
<?xml version="1.0" encoding="utf-8"?>
<Package>
  <System>
    <KeymanDeveloperVersion>17.0.326.0</KeymanDeveloperVersion>
    <FileVersion>7.0</FileVersion>
  </System>
  <Options>
    <ExecuteProgram></ExecuteProgram>
    <ReadMeFile>readme.htm</ReadMeFile>
    <LicenseFile>..\LICENSE.md</LicenseFile>
    <MSIFileName></MSIFileName>
    <MSIOptions></MSIOptions>
    <FollowKeyboardVersion/>
  </Options>
  <StartMenu>
    <Folder></Folder>
    <Items/>
  </StartMenu>
  <Info>
    <Name URL="">javascript_error</Name>
    <Copyright URL="">Copyright © SIL</Copyright>
    <Author URL="">Marc Durdin</Author>
    <Description URL="">javascript_error test keyboard</Description>
    <Version URL=""></Version>
  </Info>
  <Files>
    <File>
      <Name>..\build\javascript_error.kmx</Name>
      <Description></Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.kmx</FileType>
    </File>
    <File>
      <Name>..\build\javascript_error.js</Name>
      <Description></Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.js</FileType>
    </File>
    <File>
      <Name>..\build\javascript_error.kvk</Name>
      <Description></Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.kvk</FileType>
    </File>
    <File>
      <Name>welcome.htm</Name>
      <Description></Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.htm</FileType>
    </File>
    <File>
      <Name>readme.htm</Name>
      <Description></Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.htm</FileType>
    </File>
    <File>
      <Name>..\LICENSE.md</Name>
      <Description></Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.md</FileType>
    </File>
  </Files>
  <Keyboards>
    <Keyboard>
      <Name>javascript_error</Name>
      <ID>javascript_error</ID>
      <Version>1.0</Version>
      <Languages>
        <Language ID="amf">Hamer-Banna</Language>
      </Languages>
    </Keyboard>
  </Keyboards>
  <Strings/>
</Package>
